[gd_scene load_steps=7 format=3 uid="uid://cejyjelau88ea"]

[ext_resource type="Script" path="res://scripts/home.gd" id="1_eudst"]
[ext_resource type="Texture2D" uid="uid://pv8xc6xpjclq" path="res://assets/pp_logo.png" id="2_mxayh"]
[ext_resource type="Texture2D" uid="uid://c8b5nbxlvy26n" path="res://assets/all_bombs.png" id="3_0h3dx"]
[ext_resource type="Texture2D" uid="uid://d2ycpl4w8j17r" path="res://assets/button_atlas.png" id="4_phvm0"]
[ext_resource type="FontFile" uid="uid://b0of6m237nk5" path="res://assets/Stacked pixel.ttf" id="5_4s5uy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_phrar"]
atlas = ExtResource("4_phvm0")
region = Rect2(0, 0, 92, 38)

[node name="home" type="Node"]
script = ExtResource("1_eudst")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.101961, 0.184314, 1)
metadata/_edit_lock_ = true

[node name="01-001" type="Sprite2D" parent="."]
position = Vector2(246, 147)
scale = Vector2(6, 6)
texture = ExtResource("2_mxayh")

[node name="AllBombs" type="Sprite2D" parent="."]
position = Vector2(244, 844)
texture = ExtResource("3_0h3dx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 125.0
offset_top = -33.0
offset_right = -100.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Button" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(184, 76)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = SubResource("AtlasTexture_phrar")
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.541176, 0.443137, 1)
theme_override_fonts/font = ExtResource("5_4s5uy")
theme_override_font_sizes/font_size = 32
text = "Difficulty"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.541176, 0.443137, 1)
theme_override_fonts/font = ExtResource("5_4s5uy")
theme_override_font_sizes/font_size = 32
selected = 1
item_count = 3
popup/item_0/text = "Easy"
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 73

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.541176, 0.443137, 1)
theme_override_fonts/font = ExtResource("5_4s5uy")
theme_override_font_sizes/font_size = 32
text = "BG Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
edit_alpha = false

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 31

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.67451, 0.541176, 0.443137, 1)
theme_override_fonts/font = ExtResource("5_4s5uy")
theme_override_font_sizes/font_size = 32
text = "Reset Data"

[node name="reset_button" type="Button" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 2
text = "Reset?"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/reset_button" to="." method="_on_reset_button_pressed"]
